@@ -1,4 +1,5 @@
 library/PSX
 library/Sabre
 library/Zend
+library/vendor
 service/webdav/library/Sabre
