@@ -8,6 +8,9 @@ before_script:
   - pear channel-discover pear.phpunit.de
   - pear install phpunit/DbUnit
   - composer install
-  - sh tests/start-webserver.sh
+  - sudo sudo php -S 0.0.0.0:80 &
+  - sleep 4
+after_script:
+  - df
 env:
   - DB=mysql
